--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1 id="titulo">Ejercicio funciones inicial</h1>
+    <h2 id="usuario-nombre">Usuario ingresado</h2>
     <img id="imagen" src="" alt="una imagen">
     <a id="enlace" href="">Enlace</a>
 
